--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Whiteboard</title>
-    <link rel="stylesheet" href="./resources/style.css">
-    <link rel="icon" href="./resources/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="resources/style.css">
+    <link rel="icon" href="resources/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
   </head>
   <body>
-    <main id="main" onmousedown="mouseDrag(event)">
+    <main id="main">
         <div id="tools-container">
             <button id="tools-button" class="material-symbols-outlined">pan_tool</button>
             <button id="tools-button" class="material-symbols-outlined">brush</button>
@@ -27,5 +27,7 @@
         </div>
     </main>
     <script src="index.js"></script>
+    <script src="js/zoom.js"></script>
+    <script src="js/tools.js"></script>
   </body>
 </html>
