--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
   </head>
   <body>
     <main id="main">
+        <canvas id="canvas"></canvas>
         <div id="tools-container">
             <button id="tools-button" class="material-symbols-outlined">pan_tool</button>
             <button id="tools-button" class="material-symbols-outlined">brush</button>
             <button id="tools-button" class="material-symbols-outlined">ink_eraser</button>
         </div>
         <div id="zoom-container">
-            <button id="zoom-button" class="material-icons" onclick="zoom(10)">zoom_out</button>
+            <button id="zoom-button" class="material-icons" onclick="zoom(-10)">zoom_out</button>
             <span id="zoom-level">100%</span>
-            <button id="zoom-button" class="material-icons" style="transform: scaleX(-1);" onclick="zoom(-10)">zoom_in</button>
+            <button id="zoom-button" class="material-icons" style="transform: scaleX(-1);" onclick="zoom(10)">zoom_in</button>
         </div>
     </main>
     <script src="index.js"></script>
