feat: zooming using mouse wheel

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <main id="main">
-        <canvas id="canvas"></canvas>
+        <canvas id="canvas" onwheel="wheel(event)"></canvas>
         <div id="tools-container">
             <button class="material-symbols-outlined fill">pan_tool</button>
             <button class="material-symbols-outlined">brush</button>
