feat: restructure tool management

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
             <button class="material-icons" style="transform: scaleX(-1);" onclick="zoom(10)">zoom_in</button>
         </div>
     </main>
+    <script type="module" src="js/ui.js"></script>
     <script src="index.js"></script>
-    <script src="js/zoom.js"></script>
-    <script src="js/tools.js"></script>
-    <script src="js/ui.js"></script>
   </body>
 </html>
