refactor: add file descriptions and authors to all main files

--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!-- 
+  File: index.html
+  Description: The main HTML file for the Whiteboard application.
+  Last edited: 1446/12/26
+  Author: Yasir Al Amriki
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
